--- a/deploy/namespace.yaml
+++ b/deploy/namespace.yaml
@@ -3,4 +3,4 @@ kind: Namespace
 metadata:
   name: testing101
   annotations:
-    field.cattle.io/projectId: c-n269k:p-mvnl7
+    field.cattle.io/projectId: c-lh2xw:p-n5ps2 
